@startuml

class "UpdateOrderStateDispatchedUI" as UI{
  +doShow()
  +headline()
}

class "UpdateOrderStateDispatchedUIController" as CTRL {
  +getListProductOrders()
  +updateOrderState(ProductOrder)
  +save(ProductOrder)
}

class "OrderRepository" as OREPO {
  +findByState(orderState)
  +save(ProductOrder)
}

class "ProductOrder" as ORDER {
  +setOrderState(OrderState)
}

class "OrderState" as STATE {

}

class "PersistenceContext" as PCON {
  -Logger LOGGER
  -RepositoryFactory theFactory
  +repositories()
}

class "RepositoryFactory" as REPOFAC {
  +agvs()
  +orders()
}

UI ..> CTRL
CTRL ->"1" OREPO : adopts
CTRL -> "1" ORDER : finds

CTRL "1" --> "1" PCON : uses
PCON "1" --> "1" REPOFAC : creates

REPOFAC "1" --> "1" OREPO : stores

OREPO "1" --> "*" ORDER : stores

STATE "1" --> "*" ORDER : describes

@enduml
